<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="weather">Weather</string>
    <string name="ad_unit">ca-app-pub-3476708907004582/5785934798</string>
    <string name="test_unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="clearSky">Clear Sky</string>
    <string name="fri_26_feb">Fri, 26 Feb</string>
    <string name="giza_gover">Giza Governorate</string>
    <string name="add_fav">Add To Favorite</string>
    <string name="add_alert">Add To Alerts</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="tempreture">Tempreture</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="notification">Notification</string>
    <string name="gps">Gps</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenhiet">Fahrenhiet</string>
    <string name="mete_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="ok">Ok</string>
    <string name="day">Day</string>
    <string name="status">Status</string>
    <string name="max_min">max/min</string>
    <string name="_13_c">13 C</string>
    <string name="weatherDegree">WeatherDegree</string>
    <string name="_1000_hpa">1000 hpa</string>
    <string name="pressure">Pressure</string>
    <string name="_100">100%</string>
    <string name="humidity">Humidity</string>
    <string name="_2_69_m_s">2.69 m/s</string>
    <string name="wind">Wind</string>
    <string name="_98">98%</string>
    <string name="cloud">Cloud</string>
    <string name="today">Today</string>
    <string name="_0_0">0.0</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="_115_m">115 m</string>
    <string name="visibility">Visibility</string>
    <string name="hour">Hour</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="today_alert">Today\'s Alert</string>
    <string name="alerts_for_today">Alerts for today ...</string>
    <string name="dismiss">Dismiss</string>
</resources>