<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_location2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="12dp"
        android:text="@string/notification"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/notification_radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/notification_radioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:text="@string/location"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/location_radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/location_radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/notification_radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_location"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/gps_radioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gps" />

        <RadioButton
            android:id="@+id/map_radioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map" />
    </RadioGroup>

        <RadioGroup
            android:id="@+id/notification_radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_location2"
            app:layout_constraintTop_toBottomOf="@+id/location_radioGroup">

            <RadioButton
                android:id="@+id/enable_radioButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/enable" />

            <RadioButton
                android:id="@+id/disable_radioButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/disable" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>