<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alarm_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:layout_marginHorizontal="16dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/alarm_layout_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:text="@string/today_alert"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:drawableStartCompat="@drawable/cloud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alarm_layout_desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/alerts_for_today"
        android:textColor="#E6FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/alarm_layout_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/alarm_layout_title_tv" />

    <Button
        android:id="@+id/dismiss_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_btn_bg"
        android:layout_marginTop="20dp"
        android:text="@string/dismiss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_layout_desc_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
