<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#18181800">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_day_weather_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/day" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView_weather_status_perDays"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/gps_fixed"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_status_weather_item_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/status" />
            <TextView
                android:id="@+id/tv_degree_weather_item_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/max_min" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>