<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toStartOf="@+id/to_cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/setting_btn_bg"
                    android:text="@string/from" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/startHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hour"
                            android:textAlignment="center"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/startDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/day"
                            android:textAlignment="center"
                            android:textSize="20dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/to_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/setting_btn_bg"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/to" />

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/endHour"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hour"
                            android:textAlignment="center"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/endDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/day"
                            android:textAlignment="center"
                            android:textSize="20dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:id="@+id/alert_radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/to_cardView">

            <RadioButton
                android:id="@+id/notification_radioButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:checked="true"
                android:text="@string/notification" />

            <RadioButton
                android:id="@+id/alarm_radioButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:text="@string/alarm" />
        </RadioGroup>

        <Button
            android:id="@+id/saveAlertDialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/setting_btn_bg"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alert_radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>